# callgraph_generator

./: .gitmodules  Makefile  README.md  bc.list  bc_bpf.list  helpers.list  output  output_bpf_test  output_bpf_test_filepath  sid_bc_bpf.list  sid_bc_bpf_linked.list  sid_bc_bpf_linked_dbg.list
cgenerator/: CMakeLists.txt  CallGraph.cc
cgenerator/lib/: CMakeLists.txt  CallGraph.cc  CallGraph.h  FuncCallGraph.cc  FunctionStackUsage.h  Generator.cc  Generator.h  MPCallGraph.cc  ParsingData  ParsingData.cc
generated_callgraphs/: output_bpf  output_bpf_test_aligned_dir_indir  output_bpf_test_filepath  readin_indircall_from_TyPM_out_testing
generated_callgraphs/helper_callgraph_with_indirectcalls/: bpf_bind  bpf_bprm_opts_set  bpf_btf_find_by_name_kind  bpf_cgrp_storage_delete  bpf_clone_redirect  bpf_copy_from_user  bpf_copy_from_user_task  bpf_csum_diff  bpf_csum_level  bpf_csum_update  bpf_current_task_under_cgroup  bpf_d_path  bpf_dynptr_data  bpf_dynptr_from_mem  bpf_dynptr_read  bpf_dynptr_write  bpf_event_output_data  bpf_find_vma  bpf_flow_dissector_load_bytes  bpf_for_each_map_elem  bpf_get_attach_cookie  bpf_get_attach_cookie_kprobe_multi  bpf_get_attach_cookie_pe  bpf_get_attach_cookie_trace  bpf_get_attach_cookie_tracing  bpf_get_attach_cookie_uprobe_multi  bpf_get_branch_snapshot  bpf_get_cgroup_classid  bpf_get_cgroup_classid_curr  bpf_get_current_ancestor_cgroup_id  bpf_get_current_cgroup_id  bpf_get_current_comm  bpf_get_current_pid_tgid  bpf_get_current_task  bpf_get_current_task_btf  bpf_get_current_uid_gid  bpf_get_func_ip_kprobe  bpf_get_func_ip_kprobe_multi  bpf_get_func_ip_tracing  bpf_get_func_ip_uprobe_multi  (+232 more)
generated_callgraphs/helper_callgraph_without_indirectcalls/: bpf_bind  bpf_bprm_opts_set  bpf_btf_find_by_name_kind  bpf_cgrp_storage_delete  bpf_cgrp_storage_get  bpf_clone_redirect  bpf_copy_from_user  bpf_copy_from_user_task  bpf_csum_diff  bpf_csum_level  bpf_csum_update  bpf_current_task_under_cgroup  bpf_d_path  bpf_dynptr_data  bpf_dynptr_from_mem  bpf_dynptr_read  bpf_dynptr_write  bpf_event_output_data  bpf_find_vma  bpf_flow_dissector_load_bytes  bpf_for_each_map_elem  bpf_get_attach_cookie  bpf_get_attach_cookie_pe  (+252 more)
